--- a/src/lambda/package.json
+++ b/src/lambda/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.549.0",
+    "@aws-sdk/lib-dynamodb": "^3.549.0",
+    "@aws-sdk/util-dynamodb": "^3.549.0",
     "tweetnacl": "^1.0.3"
   }
 }
