--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "shelljs": "^0.8.5",
+    "yargs": "^17.7.2"
   },
   "scripts": {
     "deploy": "./scripts/deploy.sh",
@@ -29,6 +31,7 @@
     "test:watch": "jest --watchAll src",
     "test:coverage": "yarn test --silent --config jest.config.json --no-cache",
     "test:badge": "yarn test:coverage && yarn make-coverage-badge --output-path ./cov-badge.svg",
-    "test:make-badge": "yarn make-coverage-badge --output-path ./cov-badge.svg"
+    "test:make-badge": "yarn make-coverage-badge --output-path ./cov-badge.svg",
+    "install-deps": "yarn && node scripts/recursive-install-yarn.js --rootDir=src"
   }
 }
