--- a/src/lambda/package.json
+++ b/src/lambda/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "main-function",
+  "version": "1.0.0",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.549.0",
     "@aws-sdk/lib-dynamodb": "^3.549.0",
